--- a/Online_Pizza_Shop/src/main/resources/templates/customPizzaPage.html
+++ b/Online_Pizza_Shop/src/main/resources/templates/customPizzaPage.html
@@ -6,7 +6,7 @@
                 <div class="row">&nbsp</div>
                 <div class="row">&nbsp</div>
                 <div class="row">&nbsp</div>
-                <h4 class="text-light">Create a custome Pizza</h4>
+                <h4 class="text-light">Create a custom Pizza</h4>
                 <div class="bg-light rounded mt-2"><input type="text" name="customPizzaName"  placeholder="Add a name"></div>
                 <div th:each="ingredient : ${ingredients}" class="bg-light rounded mt-2">
                     <div th:if="${ingredient.getName() != ''}" class="row col-md-12">
