--- a/Online_Pizza_Shop/src/main/resources/templates/fragments/header.html
+++ b/Online_Pizza_Shop/src/main/resources/templates/fragments/header.html
@@ -17,7 +17,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-danger"  sec:authorize="hasRole('ROLE_ADMIN')" href="/adminFunctions/addNewPizza">Add New Pizza</a>
+                <a class="nav-link text-danger" id="add_new_pizza_button"  sec:authorize="hasRole('ROLE_ADMIN')" href="/adminFunctions/addNewPizza">Add New Pizza</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" th:if="${#request.getRemoteUser() == null}" href="/login">Login</a>
